--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@nestjs/common": "10.1.2",
     "@nestjs/config": "3.0.0",
     "@nestjs/core": "10.1.2",
+    "@nestjs/microservices": "10.1.2",
     "@nestjs/passport": "10.0.0",
     "@nestjs/platform-express": "10.1.2",
     "dotenv": "16.3.1",
+    "kafkajs": "2.2.4",
     "knex": "2.5.1",
     "passport": "0.6.0",
     "passport-local": "1.0.0",
